Changed from polls to spotifyWrapped

--- a/mysite/spotifyWrapped/templates/spotifyWrapped/initialLogIn.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/initialLogIn.html
@@ -20,7 +20,7 @@
     <script>
         function redirectToSpotify() {
             // Redirect to Spotify Authorization URL
-            window.location.href = "{% url 'polls:spotify_login' %}";
+            window.location.href = "{% url 'spotifyWrapped:spotify_login' %}";
         }
     </script>
 </body>
