--- a/mysite/spotifyWrapped/templates/spotifyWrapped/initialLogIn.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/initialLogIn.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Hiragino+Kaku+Gothic+Std&display=swap" rel="stylesheet" />
-    <link href="{% static 'polls/initialLogIn.css' %}" rel="stylesheet" />
+    <link href="{% static 'spotifyWrapped/initialLogIn.css' %}" rel="stylesheet" />
     <title>Spotify Wrapped</title>
 </head>
 <body>
