--- a/mysite/spotifyWrapped/static/spotifyWrapped/home.css
+++ b/mysite/spotifyWrapped/static/spotifyWrapped/home.css
@@ -8,6 +8,7 @@
         }
 
         h1 {
+            text-align: center;
             margin-left: 20px;
             font-size: 2.5em;
         }
@@ -42,6 +43,12 @@
 
         .card:hover {
             transform: scale(1.02);
+        }
+
+        .card:active {
+            background-color: #128b3f;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            transform: translateY(0);
         }
 
         .add-card {
@@ -86,4 +93,37 @@
           color:white;
           cursor:pointer;
           border-radius :10px
-      }
+        }
+
+        .login-button {
+            display: inline-block;
+            background-color: #1DB954; /* Spotify green */
+            color: #fff;
+            font-weight: bold;
+            font-size: 1.2em;
+            padding: 0.8em 1.5em;
+            border-radius: 30px;
+            text-decoration: none;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Hover effect */
+        .login-button:hover {
+            background-color: #17a74b;
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.3);
+            transform: translateY(-3px);
+        }
+
+        /* Active effect */
+        .login-button:active {
+            background-color: #128b3f;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+            transform: translateY(0);
+        }
+
+        /* Centering login button container */
+        .button {
+            text-align: center;
+            margin-top: 20px;
+        }
