--- a/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/home.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Wrapped Grid</title>
-    <link rel="stylesheet" href="{% static 'spotifyWrapped/home.css' %}"  />
+    <link rel="stylesheet" href="{% static 'spotifyWrapped/home.css' %}" />
 </head>
-<body>
+<body class >
+    <button  class="dark-mode-button" id="toggleDarkMode">Toggle Dark Mode</button>
+
     {% if username != "Guest" %}
         <h1>Welcome {{ username }}'s Spotify Wrapped</h1>
     {% else %}
@@ -52,39 +54,6 @@
    </div>
 
    <!-- JavaScript Section -->
-   <script>
-      const addCard = document.getElementById('addCard');
-      const selectionModal = document.getElementById('selectionModal');
-
-      // Show the modal when the add card is clicked
-      addCard.addEventListener('click', () => {
-         selectionModal.style.display = 'flex';
-      });
-
-      // Close modal function
-      function closeSelectionModal() {
-         selectionModal.style.display = 'none';
-      }
-
-      // Start Spotify Wrapped based on selected time period
-      async function startWrapped(period) {
-        closeSelectionModal();
-        alert(`Generating Spotify Wrapped for ${period}`);
-     
-        try {
-            const response = await fetch(`http://localhost/api/wrapped?period=${encodeURIComponent(period)}`, {
-                method: 'GET',
-                headers: {
-                    'Content-Type': 'application/json'
-                }
-            });
-            const result = await response.json();
-            console.log("Data saved", result);
-        } catch (error) {
-            console.error("Error saving data", error);
-        }
-     }
-   </script>
-
+   <script src="{% static 'spotifyWrapped/home.js' %}"></script>
 </body>
 </html>
